fixed layout issues

--- a/public/stylesheets/buttons.css
+++ b/public/stylesheets/buttons.css
@@ -1,8 +1,17 @@
 #menu {
-	
+	float: right;
+	position: relative;
+	top: 100px;
+	right: 9px;
 }
 
 #menu .menu_button {
 	background: #E8EFFA;
 	padding: 0.5em 1em 0.5em 1em;
+	border-radius: 15px 15px 0px 0px;
+	-moz-border-radius: 15px 15px 0px 0px;
+	-webkit-border-top-left-radius: 15px
+	-webkit-border-top-right-radius: 15px;
+	-webkit-border-bottom-right-radius: 0px;
+	-webkit-border-bottom-left-radius: 0px;
 }
